--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,7 @@
 <body>
 <div class="container">
   <div class="box">
-    
+    <image class="bg" src="assets/bg.jpg"></div>
   </div>
 </div>
 </body>
