Add the start screen

--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,9 @@
 <body>
 <div class="container">
   <div class="box">
-    <image class="bg" src="assets/bg.jpg"></div>
+    <image class="bg" src="assets/bg.jpg"></image>
+    <image class="chouchoule" src="assets/chouchoule.png"></image>
+    <image class="tongsouwuqi" src="assets/tongsouwuqi.png"></image>
   </div>
 </div>
 </body>
