Set up the basic element to the html page

--- a/src/index.html
+++ b/src/index.html
@@ -11,6 +11,23 @@
     <image class="bg" src="assets/bg.jpg"></image>
     <image class="chouchoule" src="assets/chouchoule.png"></image>
     <image class="tongsouwuqi" src="assets/tongsouwuqi.png"></image>
+    <div class="crazy_number_box">
+
+    </div>
+    <div class="button-group">
+      <div class="button zhongjiangrenshu">
+        <label>中奖人数</label>
+      </div>
+      <div class="button kaishi">
+        <label>开始</label>
+      </div>
+      <div class="button kaishi">
+        <label>再来一次</label>
+      </div>
+    </div>
+    <div class="results">
+      中奖公告
+    </div>
   </div>
 </div>
 </body>
