--- a/src/index.html
+++ b/src/index.html
@@ -12,7 +12,7 @@
     <img class="bg" src="assets/bg.jpg"></img>
     <img class="chouchoule" src="assets/chouchoule.png"></img>
     <img class="tongsouwuqi" src="assets/tongsouwuqi.png"></img>
-    <div class="crazy_number_box">
+    <div class="crazy_number_box hidden">
       <div class="odometer" id="odometer"></div>
     </div>
     <div class="button-group">
