Apply the all known rules

--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title><%= htmlWebpackPlugin.options.title %></title>
-  <script src="assets/odometer.min.js"></script>
+  <script src="assets/odometer.js"></script>
 </head>
 <body>
 <div class="container">
@@ -17,8 +17,8 @@
     </div>
     <div class="button-group">
       <div class="button zhongjiangrenshu">
-        <img class="mode_1_btn" src="assets/bt_1.png"/>
-        <img class="mode_5_btn hidden" src="assets/bt_5.png"/>
+        <img class="mode_1_btn hidden" src="assets/bt_1.png"/>
+        <img class="mode_5_btn " src="assets/bt_5.png"/>
         <img class="mode_btn_press hidden" src="assets/bt_5-1_press.png"/>
         <label>中奖人数</label>
       </div>
@@ -33,9 +33,7 @@
         <label>再来一次</label>
       </div>
     </div>
-    <div class="results">
-      ABCDEFG123568
-    </div>
+    <div class="results"></div>
   </div>
 </div>
 </body>
