Update the final UI and Pics

--- a/src/index.html
+++ b/src/index.html
@@ -20,7 +20,9 @@
         <img class="mode_1_btn hidden" src="assets/bt_1.png"/>
         <img class="mode_5_btn " src="assets/bt_5.png"/>
         <img class="mode_btn_press hidden" src="assets/bt_5-1_press.png"/>
-        <label>中奖人数</label>
+        <label>
+          <img src="assets/numberofluckypeople.png"/>
+        </label>
       </div>
       <div class="button kaishi">
         <img class="start_btn" src="assets/bt_start.png"/>
@@ -30,7 +32,9 @@
       <div class="button retry">
         <img class="retry_btn" src="assets/bt_retry.png"/>
         <img class="retry_press_btn hidden" src="assets/bt_retry_press.png"/>
-        <label>再来一次</label>
+        <label>
+          <img src="assets/onemoretime.png"/>
+        </label>
       </div>
     </div>
     <div class="results"></div>
