Update the assets

--- a/src/index.html
+++ b/src/index.html
@@ -38,6 +38,7 @@
       </div>
     </div>
     <div class="results"></div>
+    <img class="zhongjianggonggao" src="assets/zhongjianggonggao.svg"/>
   </div>
 </div>
 </body>
